[tool.poetry]
name = "workshop-aberto-02"
version = "0.1.0"
description = ""
authors = ["mfnogueira <marciofnogueira@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
duckdb = "^0.10.0"
shell = "^1.0.1"
streamlit = "^1.32.2"
psycopg2-binary = "^2.9.9"
python-dotenv = "^1.0.1"
psycopg2 = "^2.9.9"
sqlalchemy = "^2.0.28"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
